--- a/client/src/app.css
+++ b/client/src/app.css
@@ -4,8 +4,8 @@
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: rgba(59, 47, 47, 0.87);
+  background-color: rgb(230, 229, 218);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -37,6 +37,10 @@ h1 {
 
 .card {
   padding: 2em;
+}
+
+.user-info{
+  padding-top: 1em;
 }
 
 #app {
