--- a/client/src/app.css
+++ b/client/src/app.css
@@ -44,6 +44,16 @@ h1 {
   padding-top: 1em;
 }
 
+.trail-dot {
+  position: absolute;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  pointer-events: none;
+  z-index: -1;
+  transition: transform 0.2s, opacity 0.2s;
+}
+
 #app {
   max-width: 1280px;
   margin: 0 auto;
