--- a/client/src/app.css
+++ b/client/src/app.css
@@ -28,7 +28,7 @@ body {
   display: flex;
   place-items: center;
   min-width: 320px;
-  min-height: 100%;
+  min-height: 100vh;
   height: auto;
   background-color: rgb(229, 228, 217);
 }
